# sid-game

./: .clang-format  .clang-tidy
src/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  control.cpp  control.hpp  game.cpp  game.hpp  hostile.cpp  hostile.hpp  laser.cpp  laser.hpp  line.cpp  line.hpp  player.cpp  player.hpp
src/game/cfg/: cfg.hpp
